--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@sabaki/shudan": "^1.5.2",
     "preact": "^10.0.1",
     "preact-render-to-string": "^5.1.0"
   },
