--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "license": "MIT",
   "dependencies": {
     "@sabaki/shudan": "^1.5.2",
+    "@sabaki/go-board": "^1.0.0",
+    "@sabaki/sgf": "^3.4.1",
+    "@sabaki/immutable-gametree": "^1.8.2",
     "preact": "^10.0.1",
     "preact-render-to-string": "^5.1.0"
   },
