--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "@sabaki/shudan": "^1.5.2",
     "@sabaki/go-board": "^1.0.0",
-    "@sabaki/sgf": "^3.4.1",
     "@sabaki/immutable-gametree": "^1.8.2",
+    "@sabaki/sgf": "^3.4.1",
+    "@sabaki/shudan": "^1.5.2",
     "preact": "^10.0.1",
     "preact-render-to-string": "^5.1.0"
   },
@@ -15,6 +15,7 @@
     "enzyme": "^3.10.0",
     "enzyme-adapter-preact-pure": "^2.0.0",
     "identity-obj-proxy": "^3.0.0",
+    "lodash.assign": "^4.2.0",
     "per-env": "^1.0.2",
     "preact-cli": "^3.0.0-rc.6",
     "preact-render-spy": "^1.2.1",
